// ==========================================
// ENUMS
// ==========================================

Enum component_category {
    Causal
    Map
    Code
    Policy_Testing // Added!
}

Enum link_role {
    PRIMARY
    LEFT
    RIGHT
}

Enum source_type {
    text
    audio
}

Enum data_status {
    raw_text
    chunked
    extracted
}

Enum map_workspace_status {
    draft
    extracted
    edited
}

Enum map_coordinate_system {
    normalized
    pixel
}

Enum map_selection_kind {
    none
    vertex
    edge
}

Enum input_mode {
    text
    file
}

Enum job_status {
    queued
    running
    completed
    failed
    cancelled
}

Enum artifact_type {
    transcript
    chunks
    causal_by_chunk
    causal_combined
    follow_up
    entities
    generated_entity
    other
}

Enum submit_scope_type {
    GROUP
    ALL
}

Enum codegen_source_type {
    manual
    derived_causal
    follow_up
    imported
}

Enum codegen_status {
    queued
    running
    completed
    failed
    cancelled
}

Enum codegen_metric_type {
    text
    number
    boolean
    json
}

// ==========================================
// CORE PROJECT & COMPONENT STRUCTURE
// ==========================================

Table projects {
    id varchar [pk]
    name varchar [not null, unique]
    deleted_at timestamp
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table project_components {
    id varchar [pk]
    title varchar [not null]
    category component_category [not null]
    last_edited_at timestamp
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table component_project_links {
    id uuid [pk]
    component_id varchar [not null, ref: > project_components.id]
    project_id varchar [not null, ref: > projects.id]
    role link_role [not null, default: 'PRIMARY']
    created_at timestamp [not null]

    indexes {
        (component_id, project_id, role) [unique]
    }

}

// ==========================================
// CAUSAL CATEGORY ENCAPSULATION
// ==========================================

Table causal_project_documents {
    id uuid [pk]
    component_id varchar [not null, ref: > project_components.id] // Direct link, no middleman!
    status data_status [not null, default: 'raw_text']
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table input_documents {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    input_mode input_mode [not null]
    source_type source_type [not null]
    original_file_name varchar
    storage_path varchar
    raw_text text
    transcript_text text
    uploaded_at timestamp [not null]
}

// ==========================================
// DECOUPLED DATA FLOW (Causal)
// ==========================================

Table text_chunks {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    chunk_index int [not null]
    text text [not null]
    start_offset int
    end_offset int
    created_at timestamp [not null]

    indexes {
        (causal_project_document_id, chunk_index) [unique]
    }
}

Table extraction_classes {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    chunk_id uuid [ref: > text_chunks.id]
    pattern_type varchar
    sentence_type varchar
    marked_type varchar
    explicit_type varchar
    marker varchar
    source_text text [not null]
    created_at timestamp [not null]
}

Table causal {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    extraction_class_id uuid [not null, ref: > extraction_classes.id]
    head text [not null]
    relationship text [not null]
    tail text [not null]
    detail text
    created_at timestamp [not null]
}

// ==========================================
// FOLLOW-UP ENCAPSULATION
// ==========================================

Table follow_ups {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    causal_id uuid [not null, ref: > causal.id]
    source_text text [not null]
    sentence_type varchar
    created_at timestamp [not null]
}

Table follow_up_questions {
    id uuid [pk]
    follow_up_id uuid [not null, ref: > follow_ups.id]
    question_text text [not null]
    generated_by varchar [default: 'system']
    generated_at timestamp [not null]
    is_filtered_in boolean [not null, default: true]
}

Table follow_up_answers {
    id uuid [pk]
    question_id uuid [not null, ref: > follow_up_questions.id]
    answer_text text [not null]
    answered_by varchar [default: 'user']
    answered_at timestamp [not null]
}

// ==========================================
// BATCHES & ENTITIES
// ==========================================

Table submission_batches {
    id uuid [pk]
    causal_project_document_id uuid [not null, ref: > causal_project_documents.id]
    scope_type submit_scope_type [not null]
    scope_ref varchar
    submitted_count int [not null, default: 0]
    status_message text
    submitted_at timestamp [not null]
}

Table generated_entities {
    id uuid [pk]
    causal_id uuid [not null, ref: > causal.id]
    entity_name varchar [not null]
    created_at timestamp [not null]

    indexes {
        (causal_id, entity_name) [unique]
    }
}

// ==========================================
// MAP CATEGORY ENCAPSULATION
// ==========================================

Table map_project_documents {
    id uuid [pk]
    component_id varchar [not null, ref: > project_components.id]
    status map_workspace_status [not null, default: 'draft']
    created_at timestamp [not null]
    updated_at timestamp [not null]

    indexes {
        (component_id) [unique]
    }
}

Table map_snapshots {
    id uuid [pk]
    map_project_document_id uuid [not null, ref: > map_project_documents.id]
    job_id varchar
    selected_model varchar
    overview_additional_info text
    bin_additional_info text
    edit_status text
    coordinate_system map_coordinate_system [not null, default: 'normalized']
    metadata_json text
    selected_kind map_selection_kind [not null, default: 'none']
    selected_ref_id varchar
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table map_snapshot_overview_files {
    id uuid [pk]
    snapshot_id uuid [not null, ref: > map_snapshots.id]
    file_name varchar [not null]
    display_order int [not null, default: 0]
    created_at timestamp [not null]

    indexes {
        (snapshot_id, file_name) [unique]
    }
}

Table map_snapshot_bin_files {
    id uuid [pk]
    snapshot_id uuid [not null, ref: > map_snapshots.id]
    file_name varchar [not null]
    display_order int [not null, default: 0]
    created_at timestamp [not null]

    indexes {
        (snapshot_id, file_name) [unique]
    }
}

Table map_vertices {
    id uuid [pk]
    snapshot_id uuid [not null, ref: > map_snapshots.id]
    vertex_id varchar [not null]
    label varchar [not null]
    x float [not null]
    y float [not null]
    vertex_type varchar
    metadata_json text
    created_at timestamp [not null]

    indexes {
        (snapshot_id, vertex_id) [unique]
    }
}

Table map_edges {
    id uuid [pk]
    snapshot_id uuid [not null, ref: > map_snapshots.id]
    edge_id varchar [not null]
    source_vertex_id varchar [not null]
    target_vertex_id varchar [not null]
    label varchar
    weight float
    metadata_json text
    created_at timestamp [not null]

    indexes {
        (snapshot_id, edge_id) [unique]
    }
}

Table map_change_logs {
    id uuid [pk]
    snapshot_id uuid [not null, ref: > map_snapshots.id]
    log_entry text [not null]
    display_order int [not null, default: 0]
    logged_at timestamp [not null]
}

// ==========================================
// CODE GENERATION FOUNDATION (POWER BI FEED)
// ==========================================

Table codegen_runs {
    id uuid [pk]
    project_id varchar [ref: > projects.id]
    component_id varchar [ref: > project_components.id]
    causal_project_document_id uuid [ref: > causal_project_documents.id]
    source_type codegen_source_type [not null, default: 'manual']
    status codegen_status [not null, default: 'queued']
    model varchar
    input_prompt text
    started_at timestamp
    finished_at timestamp
    duration_ms int
    input_entity_count int [not null, default: 0]
    generated_entity_count int [not null, default: 0]
    generated_file_count int [not null, default: 0]
    error_message text
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

Table codegen_input_entities {
    id uuid [pk]
    run_id uuid [not null, ref: > codegen_runs.id]
    entity_name varchar [not null]
    source_causal_id uuid [ref: > causal.id]
    source_head text
    source_relationship text
    source_tail text
    source_detail text
    created_at timestamp [not null]

    indexes {
        (run_id, entity_name) [unique]
    }
}

Table codegen_generated_files {
    id uuid [pk]
    run_id uuid [not null, ref: > codegen_runs.id]
    entity_name varchar [not null]
    file_path text [not null]
    language varchar
    file_size_bytes int
    generation_order int [not null, default: 0]
    created_at timestamp [not null]

    indexes {
        (run_id, file_path) [unique]
    }
}

Table codegen_run_metrics {
    id uuid [pk]
    run_id uuid [not null, ref: > codegen_runs.id]
    metric_key varchar [not null]
    metric_type codegen_metric_type [not null, default: 'text']
    metric_value text [not null]
    created_at timestamp [not null]

    indexes {
        (run_id, metric_key) [unique]
    }
}